--- a/Homework3/app/src/main/res/layout/adapter_vertical.xml
+++ b/Homework3/app/src/main/res/layout/adapter_vertical.xml
@@ -5,7 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@color/white">
     <ImageView
         android:id="@+id/img_photo"
         android:layout_width="wrap_content"
